--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -1,3 +1,131 @@
 @import ../utils/variables
 @import ../utils/mixins
 @import ../../libs/include-media/dist/include-media
+
+/*button*/
+[class|="btn"], [class*=" btn-"], input[type="submit"], input[type="button"], input[type="reset"], button
+	display: inline-block
+	vertical-align: top
+	position: relative
+	text-align: center
+	text-decoration: none
+	cursor: pointer
+
+[class|="btn"], [class*=" btn-"]
+	& input[type="submit"], & input[type="button"], & input[type="reset"]
+		background: url("../../img/empty.png") repeat
+		display: block
+		+cover()
+		padding: 0
+		border: none
+		z-index: 99
+		opacity: 0
+
+/*btn-default*/
+[class*="btn-default"]
+	position: relative
+	+font-alt-bold
+	+font(1.6rem, 24px)
+	color: $btn-text-color
+	padding: 12px 25px
+	border: 1px solid transparent
+	background: $btn-bg-color
+	box-shadow: none
+	transition-property: background-color, color
+	transition-duration: $animation-speed
+	margin: 0
+
+	.no-touchevents &:hover
+		background-color: $btn-bg-hover-color
+
+	&:active
+		transform: scale(0.95)
+
+/*btn-default end*/
+
+/*btn-default-alt*/
+.btn-default-alt
+	color: $btn-bg-color
+	border: 2px solid $btn-bg-color
+	background: $btn-text-color
+
+	.no-touchevents &:hover
+		background: $btn-bg-hover-color
+		color: $btn-text-color
+
+/*btn-default-alt end*/
+/*button end*/
+
+/*button popup close*/
+.btn-popup-close
+	//<a href="#" class="btn-popup-close js-btn-menu-close"><i></i><span>Закрыть</span></a>
+	$btn-bg: #f3f3f3
+	$btn-color: $text-color
+	$btn-size: 60px
+	$btn-space: 12px
+	$btn-lines-width: 20px
+	$btn-lines-height: 3px
+	$btn-lines-space: 5px
+	$btn-lines-color: $text-color
+
+	=line-style()
+		+size($btn-lines-width, $btn-lines-height)
+		border-radius: 2px
+
+	display: block
+	+size($btn-size)
+	background: $btn-bg
+	color: white
+	text-decoration: none
+	+clear-spacing
+	white-space: nowrap
+	transition-property: background-color, opacity, visibility
+	transition-duration: $animation-speed
+
+	+media('<mob-lg')
+		+size(45px)
+
+	&::before
+		content: ''
+		display: inline-block
+		height: $btn-size
+		min-height: 100%
+		vertical-align: middle
+
+	> span
+		+hide-text
+
+	> i
+		display: inline-block
+		vertical-align: middle
+		position: relative
+		backface-visibility: hidden
+		background-color: transparent
+		+line-style
+
+		&::before, &::after
+			+pseudo()
+			left: 0
+			backface-visibility: hidden
+			+line-style
+			background: $btn-lines-color
+			transition-property: background-color
+			transition-duration: $animation-speed
+
+		//first line menu
+		&::before
+			top: 0
+			transform: rotate(-45deg)
+
+		//third line menu
+		&::after
+			top: 0
+			transform: rotate(45deg)
+
+	.no-touchevents &:hover
+		background-color: $mark-color
+
+//& > i::before, & > i::after
+	background-color: white
+
+/*button popup close end*/
