--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -26,37 +26,48 @@
 /*TYPOGRAPHY*/
 /*======================================================*/
 @import base/typography
+@import components/buttons
+@import components/forms-default
 
 /*======================================================*/
-/*PARTIALS*/
+/*LAYOUT*/
 /*======================================================*/
 @import partials/layout
-@import partials/header
-@import partials/sidebar
-@import partials/aside
-@import partials/navigation
-@import partials/footer
-@import partials/forms-default
 
 /*======================================================*/
-/*COMPONENTS*/
+/*COMMON*/
 /*======================================================*/
-@import components/buttons
-@import components/files
+///*======================================================*/
+///*PARTIALS 1*/
+///*======================================================*/
+@import partials/header
+@import partials/navigation
+
+///*======================================================*/
+///*COMPONENTS*/
+///*======================================================*/
 @import components/breadcrumbs
+@import components/files
 @import components/sliders
 @import components/user-form
 @import components/bitrix-search
 @import components/feature-list
 
-/*======================================================*/
-/*PAGES*/
-/*======================================================*/
+///*======================================================*/
+///*PARTIALS 2*/
+///*======================================================*/
+@import partials/sidebar
+@import partials/aside
+@import partials/footer
+
+///*======================================================*/
+///*PAGES*/
+///*======================================================*/
 @import pages/home
 
-/*======================================================*/
-/*THEMES*/
-/*======================================================*/
+///*======================================================*/
+///*THEMES*/
+///*======================================================*/
 @import themes/theme
 
 /*======================================================*/
