--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -15,7 +15,7 @@
 	& input[type="submit"], & input[type="button"], & input[type="reset"]
 		background: url("../../img/empty.png") repeat
 		display: block
-		+cover()
+		+cover-abs()
 		padding: 0
 		border: none
 		z-index: 99
