--- a/src/sass/utils/_mixins.sass
+++ b/src/sass/utils/_mixins.sass
@@ -425,12 +425,11 @@
 ///   +cover
 ///
 /// img.foo
-///   +cover(null)
+///   +cover-rel()
 ///
 /// @example css - Вывод CSS
 ///
 /// img.foo {
-///   position: absolute;
 ///   left: 0;
 ///   top: 0;
 ///   width: 100%;
@@ -438,6 +437,7 @@
 /// }
 ///
 /// img.foo {
+///   position: relative
 ///   left: 0;
 ///   top: 0;
 ///   width: 100%;
