--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -29,24 +29,22 @@ h1
 		+font($font-size-h1--sm, $line-height-h1--sm)
 
 h2
-	+font(round-float($font-size-h1*0.78, 1), round-float(($line-height-h1*1.08),1))
+	+font($font-size-h2, $line-height-h2)
 
 	+media('<mob-lg')
-		+font(round-float($font-size-h1--sm*0.85, 1), round-float(($line-height-h1--sm*1.08),1))
+		+font($font-size-h2--sm, $line-height-h2--sm)
 
 h3
-	+font(round-float($font-size-h1*0.61, 1), round-float(($line-height-h1*1.2),1))
+	+font($font-size-h3, $line-height-h3)
 
 h4
-	+font(round-float($font-size-h1*0.5, 1), round-float(($line-height-h1*1.33),1))
+	+font($font-size-h4, $line-height-h4)
 
 h5
-	font-weight: 700
-	+font($font-size, 1.5)
+	+font($font-size-h5, $line-height-h5)
 
 h6
-	+font(round-float($font-size*0.75, 1), 1.6)
-	font-weight: 400
+	+font($font-size-h6, $line-height-h6)
 	text-transform: uppercase
 
 p
@@ -102,6 +100,12 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	+font-bold
 	font-size: 1.2em
 	margin-bottom: $bottom-space
+
+	b, strong
+		+font-bold
+
+	i, em
+		+font-bold-italic
 
 .entry-img
 	position: relative
