--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -9,10 +9,28 @@ $breakpoints: ('desk-hd': 1920px, 'desk-lg': 1600px, 'desk-md': 1366px, 'desk-sm
 $font-size: 1.6rem !default
 $line-height: round-float(2.8rem/$font-size, 2) !default
 
+// ===============
 $font-size-h1: 3.6rem !default
 $line-height-h1: 1.2 !default
 $font-size-h1--sm: 2.6rem !default
 $line-height-h1--sm: 1.3 !default
+// ===============
+$font-size-h2: round-float($font-size-h1*0.78, 1) !default
+$line-height-h2: round-float(($line-height-h1*1.08),1) !default
+$font-size-h2--sm: round-float($font-size-h1--sm*0.85, 1) !default
+$line-height-h2--sm: round-float(($line-height-h1--sm*1.08),1) !default
+// ===============
+$font-size-h3: round-float($font-size-h1*0.61, 1) !default
+$line-height-h3: round-float(($line-height-h1*1.2),1) !default
+// ===============
+$font-size-h4: round-float($font-size-h1*0.5, 1) !default
+$line-height-h4: round-float(($line-height-h1*1.33),1) !default
+// ===============
+$font-size-h5: $font-size !default
+$line-height-h5: $line-height !default
+// ===============
+$font-size-h6: round-float($font-size*0.75, 1) !default
+$line-height-h6: round-float($line-height*1.25, 1) !default
 
 $bottom-space: round-float($font-size*$line-height, 1) !default
 $bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
