--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -50,7 +50,7 @@
 	background: $btn-text-color
 
 	.no-touchevents &:hover
-		background: $btn-bg-hover-color
+		background: $btn-bg-color
 		color: $btn-text-color
 
 /*btn-default-alt end*/
