--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -241,7 +241,6 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 		border: solid transparent
 		border-width: 5px 0 5px 9px
 		border-left-color: $text-color-alt
-		box-sizing: border-box
 
 	ol
 		counter-reset: section
@@ -261,7 +260,6 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 				padding: 0 4px 0 0
 				min-width: 30px
 				margin-left: -30px
-				box-sizing: border-box
 
 	ul,
 	ol
@@ -290,7 +288,7 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	overflow: auto
 	max-width: 100%
 	-webkit-overflow-scrolling: touch
-	margin: 0 0 $bottom-space
+	margin-bottom: $bottom-space
 
 	table
 		margin-bottom: 0
