--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -37,9 +37,11 @@ $bottom-space-sm: round-float($font-size*$line-height*0.5, 1) !default
 $bottom-space-md: round-float($font-size*$line-height*1.5, 1) !default
 $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 
+// цвет бренда
+$base-color: tomato
 // цвет фона страницы
 $bg-color: brown !default
-// цвет остовного текста
+// цвет основного текста
 $text-color: #262626 !default
 // цвет основных заголовков заголовков
 $title-color: black !default
@@ -52,7 +54,7 @@ $link-color: blue !default
 // цвет линий и границ
 $border-color: lightgray !default
 // цвет специальных элементов
-$mark-color: tomato !default
+$mark-color: coral !default
 
 // user content class
 // class на контейнере, в котором будет использоваться стилизация
@@ -84,6 +86,16 @@ $form-border-focus-color: darken($form-border-color, 20%) !default
 $form-error-color: red !default
 $form-success-color: green !default
 $form-bottom-space: 3rem !default
+// ==================
+$form-font-size: 16px
+$form-line-height: 24px
+// ==================
+$input-space-v: 12px
+$input-space-h: 18px
+$select-space-v: 12px
+$select-space-h: $input-space-h
+$select-arrow-width: 40px
+$select-arrow-height: 100%
 
 // btn
 $btn-bg-color: tomato !default
