--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -86,14 +86,17 @@ $form-border-focus-color: darken($form-border-color, 20%) !default
 $form-error-color: red !default
 $form-success-color: green !default
 $form-bottom-space: 3rem !default
+$form-bottom-space--sm: 1.5em !default
+$form-gap: 60px !default
 // ==================
 $form-font-size: 16px
 $form-line-height: 24px
+$form-input-height: 50px
 // ==================
-$input-space-v: 12px
-$input-space-h: 18px
+$form-input-space-v: 12px
+$form-input-space-h: 18px
 $select-space-v: 12px
-$select-space-h: $input-space-h
+$select-space-h: $form-input-space-h
 $select-arrow-width: 40px
 $select-arrow-height: 100%
 
