--- a/src/sass/components/_forms-default.sass
+++ b/src/sass/components/_forms-default.sass
@@ -8,6 +8,9 @@
 	position: relative
 	margin-bottom: $form-bottom-space
 
+.input-holder
+	position: relative
+
 .form-row
 	margin: 0 -#{round($form-gap*0.5)}
 	font-size: 0
@@ -75,10 +78,13 @@ input[type="text"], input[type="password"], input[type="email"], input[type="sea
 		box-shadow: inset 0 0 0 1px $form-border-focus-color
 
 	//form error
-	&.error, .error > &, .no-touchevents &.error, .no-touchevents .error > &
+	&.error, .no-touchevents &.error
 		color: $form-error-color
 		border-color: $form-error-color
-		box-shadow: inset 0 0 0 1px $form-error-color
+		box-shadow: inset 0 0 0 1px transparent
+
+		&:focus
+			box-shadow: inset 0 0 0 1px $form-error-color
 
 textarea
 	padding: #{$form-input-space-v} #{$form-input-space-h}
@@ -94,14 +100,48 @@ textarea
 	color: $form-error-color
 	display: none
 
-	form .error &
+	form .error ~ &
 		display: block
 
-.success-text
-	font-weight: bold
-	color: $form-success-color
-	padding: 0 0 20px
-	text-align: center
+.confirm-note
+
+	$this-icon-lines-width: 12px
+	$this-icon-lines-height: 2px
+	$this-icon-lines-color: $base-color
+
+	position: absolute
+	left: 100%
+	top: round($form-input-height*0.5)
+	+font(0, 0)
+	+size(16px)
+	margin: -8px 0 0 10px
+	backface-visibility: hidden
+	z-index: -1
+	pointer-events: none
+	display: none
+
+	form .success ~ &
+		display: block
+
+	&::before, &::after
+		+pseudo()
+		bottom: 0
+		backface-visibility: hidden
+		background-color: $this-icon-lines-color
+		transition-property: background-color
+		transition-duration: $animation-speed
+
+	&::before
+		+size(round($this-icon-lines-width*0.75), $this-icon-lines-height)
+		right: 50%
+		transform-origin: bottom right
+		transform: rotate(45deg)
+
+	&::after
+		+size(round($this-icon-lines-width*1.3), $this-icon-lines-height)
+		left: 50%
+		transform-origin: bottom left
+		transform: rotate(-55deg)
 
 /*form common end*/
 
@@ -525,8 +565,7 @@ input[type="radio"]
 		width: 100%
 
 	select,
-	.select2-container--default .select2-selection--single,
-	.select2-container--default .select2-selection--multiple
+	.select2-container--default .select2-selection
 		display: block
 		position: relative
 		overflow: hidden
@@ -549,8 +588,7 @@ input[type="radio"]
 		height: auto
 
 	select,
-	.select2-container--default .select2-selection--single .select2-selection__rendered,
-	.select2-container--default .select2-selection--multiple .select2-selection__rendered
+	.select2-container--default .select2-selection .select2-selection__rendered
 		+font-normal
 		+font($form-font-size, $form-line-height)
 		text-transform: none
@@ -559,9 +597,9 @@ input[type="radio"]
 	select
 		padding-right: 40px
 
-		&:focus
-			color: $form-text-color
-			border-color: $form-border-focus-color
+	//&:focus
+		color: $form-text-color
+		border-color: $form-border-focus-color
 
 	.select2-container--default
 		.select2-selection--single
@@ -621,14 +659,15 @@ input[type="radio"]
 
 			li
 				padding: 0 4px
-				margin: 4px 8px 4px 0
+				margin: 3px 8px 3px 0
+				border-right: 1px solid transparent
 
 				&::before
 					content: none
 
 		.select2-selection__choice
-			background-color: $base-color
-			border: 1px solid $base-color
+			background-color: #f3f3f3
+			border: 1px solid #f3f3f3
 			border-radius: 0
 			color: $text-color
 
@@ -637,6 +676,12 @@ input[type="radio"]
 
 			&:hover
 				color: $link-color
+
+.select select.error
+	&,
+	& ~ .select2-container--default .select2-selection--single,
+	& ~ .select2-container--default .select2-selection--multiple
+		border-color: $form-error-color
 
 /*select2 dropdown*/
 .select2-dropdown
@@ -659,11 +704,12 @@ input[type="radio"]
 			height: 34px
 
 			&:focus
-				border-color: $form-border-color
-				box-shadow: inset 0 0 0 1px $form-border-color
+				border-color: $form-border-focus-color
+				//box-shadow: inset 0 0 0 1px $form-border-focus-color
+				box-shadow: none
 
 	.select2-results>.select2-results__options
-		max-height: 210px
+		max-height: 200px
 
 	.select2-results__option[aria-selected=true]
 		background-color: #f3f3f3
@@ -671,6 +717,13 @@ input[type="radio"]
 	.select2-results__option--highlighted[aria-selected]
 		background-color: $base-color
 		color: $text-color
+
+.select2-container--open
+	.select2-dropdown--below
+		box-shadow: 0 -1px 0 $form-border-color
+
+	.select2-dropdown--above
+		box-shadow: 0 1px 0 $form-border-color
 
 /*select2 dropdown end*/
 /*select end*/
