--- a/src/sass/components/_forms-default.sass
+++ b/src/sass/components/_forms-default.sass
@@ -5,11 +5,13 @@
 /*FORM STYLES DEFAULT
 /*form layout
 .form-row, .input-wrap
-	position: relative
+	position: relative // Важно! Для позицирования отметки подтверждения полей формы
 	margin-bottom: $form-bottom-space
+	z-index: 1 // Важно! Отметка подтверждения полей формы имеет z-index: -1
 
 .input-holder
-	position: relative
+	position: relative // Важно! Для позицирования отметки подтверждения полей формы
+	z-index: 1 // Важно! Отметка подтверждения полей формы имеет z-index: -1
 
 .form-row
 	margin: 0 -#{round($form-gap*0.5)}
@@ -96,6 +98,7 @@ textarea
 	position: absolute
 	+size(100%, 22px)
 	+font(12px, 22px)
+	letter-spacing: normal // Важно!
 	+truncate(none)
 	color: $form-error-color
 	display: none
@@ -105,6 +108,7 @@ textarea
 
 .confirm-note
 
+	$this-icon-size: 16px
 	$this-icon-lines-width: 12px
 	$this-icon-lines-height: 2px
 	$this-icon-lines-color: $base-color
@@ -113,12 +117,18 @@ textarea
 	left: 100%
 	top: round($form-input-height*0.5)
 	+font(0, 0)
-	+size(16px)
-	margin: -8px 0 0 10px
+	+size($this-icon-size)
+	margin: -8px 0 0 #{round(($text-layout-space-horizontal - $this-icon-size)*0.5)}
 	backface-visibility: hidden
 	z-index: -1
 	pointer-events: none
 	display: none
+
+	+media('<tab-lg')
+		margin-left: #{round(($text-layout-space-horizontal--md - $this-icon-size)*0.5)}
+
+	+media('<tab-sm')
+		margin-left: #{round(($text-layout-space-horizontal--sm - $this-icon-size)*0.5)}
 
 	form .success ~ &
 		display: block
@@ -226,7 +236,7 @@ input[type="checkbox"] + label::before, .check-label > span > i::before
 	top: 50%
 	margin-top: -9px
 	border-radius: 0
-	border: 1px solid $mark-color
+	border: 1px solid $checkbox-color
 
 input[type="checkbox"] + label > span, input[type="radio"] + label > span, input[type="checkbox"] + span, input[type="radio"] + span
 	display: inline-block
@@ -261,7 +271,7 @@ input[type="checkbox"]
 		left: 0
 		top: 50%
 		border-radius: 2px
-		background: $mark-color
+		background: $checkbox-color
 		transition-property: opacity
 		transition-duration: $animation-speed
 		transition-timing-function: linear
@@ -321,7 +331,7 @@ input[type="radio"]
 		top: 50%
 		margin-top: -9px
 		border-radius: 50px
-		border: 1px solid $mark-color
+		border: 1px solid $checkbox-color
 
 	& + label::after, & + span::after
 		content: ''
@@ -344,7 +354,7 @@ input[type="radio"]
 		margin-top: -5px
 		border-radius: 50%
 		overflow: hidden
-		background: $mark-color
+		background: $checkbox-color
 		animation: bounceout 0s
 		animation-iteration-count: 1
 		animation-fill-mode: forwards
