--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -210,6 +210,19 @@ i b, i strong, em b, em strong, b i, b em, strong i, strong em
 	column-count: 4
 	font-size: 0.8em
 
+	+media('<desk-sm')
+		column-count: 3
+
+.columnize--3, .columnize--4
+
+	+media('<tab-lg')
+		column-count: 2
+
+.columnize, .columnize--3, .columnize--4
+
+	+media('<tab-sm')
+		column-count: 1
+
 /*columnize end*/
 
 .#{$user-content}
