--- a/src/sass/utils/_variables.sass
+++ b/src/sass/utils/_variables.sass
@@ -46,7 +46,7 @@ $bottom-space-lg: round-float($font-size*$line-height*2, 1) !default
 // цвет бренда
 $base-color: tomato
 // цвет фона страницы
-$bg-color: brown !default
+$bg-color: #444 !default
 // цвет фона элементов выделяющихся на страницы
 $bg-color-alt: #f3f3f3 !default
 // цвет основного текста
