--- a/src/sass/base/_typography.sass
+++ b/src/sass/base/_typography.sass
@@ -340,6 +340,10 @@ table
 			&:last-child, &:last-child
 				border-right-width: 1px
 
+		tr:last-child
+			td
+				border-width: 1px 0
+
 		td
 			border-top-width: 1px
 
