--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -22,6 +22,7 @@
 /*======================================================*/
 @import base/normalize.min
 @import base/reset
+@import base/oldie
 /*======================================================*/
 /*TYPOGRAPHY*/
 /*======================================================*/
